# tree-document-format

./: .gitignore  .npmrc  Cargo.toml  README.md
.github/workflows/: publish.yml
crates/tree-doc-cli/: Cargo.toml
crates/tree-doc-cli/src/: main.rs  output.rs
crates/tree-doc-cli/src/commands/: info.rs  mod.rs  validate.rs  view.rs
crates/tree-doc-core/: Cargo.toml
crates/tree-doc-core/src/: error.rs  lib.rs  parse.rs  schema.rs  types.rs  validate.rs  viewer.rs
crates/tree-doc-core/tests/: validate_test.rs  viewer_test.rs
crates/tree-doc-wasm/: Cargo.toml
crates/tree-doc-wasm/src/: lib.rs
examples/: begin-to-end.tree.json  empty-document.tree.json  minimal.tree.json  story.tree.json
examples/invalid/: dangling-edge.tree.json  duplicate-ids.tree.json  general-cycle.tree.json  missing-fields.tree.json  orphan-node.tree.json  trunk-cycle.tree.json
npm/: index.d.ts  index.js  package.json
schemas/: tier0.schema.json  tier1.schema.json
scripts/: build-pkg.sh
web/: index.html  main.js  style.css
