[package]
name = "tree-doc-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "CLI for Tree Document Format validation and viewing"

[[bin]]
name = "tree-doc"
path = "src/main.rs"

[dependencies]
tree-doc-core = { path = "../tree-doc-core" }
clap = { version = "4", features = ["derive"] }
miette = { version = "7", features = ["fancy"] }
colored = "3"
