[package]
name = "tree-doc-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core library for Tree Document Format validation and viewing"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonschema = { version = "0.28", default-features = false }
petgraph = "0.8"
thiserror = "2"
