[package]
name = "tree-doc-wasm"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "WASM bindings for Tree Document Format"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tree-doc-core = { path = "../tree-doc-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
js-sys = "0.3"
getrandom = { version = "0.3", features = ["wasm_js"] }
